[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/UI/Title.png" type="Texture" id=1]
[ext_resource path="res://Audio/title_pure.wav" type="AudioStream" id=2]
[ext_resource path="res://Fonts/FontFancy.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Title/Title.gd" type="Script" id=4]
[ext_resource path="res://Audio/Title Click.ogg" type="AudioStream" id=5]
[ext_resource path="res://Fonts/Kestoy Selfie.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/superstar_memesbruh03.ttf" type="DynamicFontData" id=7]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1, 130, 1 )
flag_disable_z = true
direction = Vector3( -1, 0.25, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.427451, 0.427451, 0.427451, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Fadein Credits"
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsHeader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Credits3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Credits2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicTitle:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -8.0, -80.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Fadeout Credits"
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsHeader:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Credits3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Credits2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Fadeout Keep Music"
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 7 )

[node name="Scene" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 160.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 336, 88 )
amount = 280
lifetime = 14.0
preprocess = 10.0
process_material = SubResource( 1 )

[node name="MusicTitle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0
autoplay = true

[node name="ButtonStart" type="Button" parent="."]
margin_left = 13.0
margin_top = 129.0
margin_right = 53.6094
margin_bottom = 153.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
action_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" type="Button" parent="."]
margin_left = 69.0
margin_top = 129.0
margin_right = 128.359
margin_bottom = 153.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="Button" parent="."]
margin_left = 129.0
margin_top = 129.0
margin_right = 188.359
margin_bottom = 153.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.3

[node name="Fade" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fadein"
playback_speed = 0.5
anims/Fadein = SubResource( 7 )
"anims/Fadein Credits" = SubResource( 11 )
anims/Fadeout = SubResource( 8 )
"anims/Fadeout Credits" = SubResource( 13 )
"anims/Fadeout Keep Music" = SubResource( 12 )

[node name="CreditsHeader" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 115.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 9 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 2.0
margin_top = 48.0
margin_right = 163.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 10 )
text = "Duncan Sparks
Programming, Writing,
Art, Sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits3" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_top = 112.0
margin_right = 241.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 10 )
text = "Ken Zhou
Production, Music,
Design, Programming"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 168.0
margin_top = 48.0
margin_right = 329.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 10 )
text = "Jeremy Anderson
Design, Music, Art,
Programming"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 64.0
margin_right = 320.0
margin_bottom = 104.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 128.0
margin_right = 320.0
margin_bottom = 168.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
